c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/extra_credit/compound_plus.c
int main(void) {
    int to_add = 0;
    to_add += 4;
    return to_add;
}