c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_parse/extra_credit/binary_increment.c
int main(void) {
    int a = 0;
    return a ++ 1;
}